# realestate-ai

./: .env  .gitignore  README.MD  architecture.drawio  docker-compose.yml  pyproject.toml
docker/mlflow/: Dockerfile
docker/postgres_init/: 01_extensions.sql
entrypoints/: queries.sql  scrap_data_sequentially.py
notebooks/: explore_bronze_listing_features.ipynb  train_model.ipynb
src/realestate-ai/data/: app.py  postgres.py
src/realestateai/data/: bronze_to_silver.py  create_training_dataset.py  download_htmls.py  hard_scrapper.py  image_embeddings.py  load_htmls.py  minio.py  new_scrapper.py  postgres.py
src/realestateai/data/postgres/: bronze_ingestion.py  db.py  listing_table.py  listings_silver.py  utils.py
src/realestateai/data/scrapers/: new_hard_scrapper.py
src/realestateai/feature_engineering/: image_embeddings.py  list_of_strings_encoder.py
src/realestateai/models/: evaluation.py  lgb_simple.py  mlflow_utils.py
tests/: test_hard_scrapper_integration.py
