[project]
name = "realestateai"
version = "0.1.0"
description = "Otodom scraper + price model + AI agents (MVP)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kyrylo" }]
dependencies = [
  # Core
  "pydantic>=2.7",
  "pydantic-settings>=2.7",
  #   "python-dotenv>=1.0",
  #   "httpx>=0.27",
  #   "rich>=13.7",
  #   "loguru>=0.7",

  # Scraping
  "requests>=2.32",
  "beautifulsoup4>=4.14",
  "geopy>=2.4.1",
  "python-dotenv>=1.0",

  # Data / ML
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",

  # Storage / DB
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",

  # API (на будущее)
  #   "fastapi>=0.115",
  #   "uvicorn[standard]>=0.30",

  # Object storage (MinIO / S3)
  "boto3>=1.34",

  # Rest
  "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ipykernel>=6.29",
  "pre-commit>=3.8",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/realestateai"]

[tool.hatch.build.targets.sdist]
include = ["src/realestateai", "pyproject.toml", "README.md"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
